# adw-web

./: .gitignore  README.md  com.example.adw_web.json  meson.build
data/: com.example.adw_web.desktop.in  com.example.adw_web.gschema.xml  com.example.adw_web.metainfo.xml.in  com.example.adw_web.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: adw-web-application.c  adw-web-application.h  adw-web-folder-item-private.h  adw-web-folder-item.blp  adw-web-folder-item.c  adw-web-folder-item.h  adw-web-window-private.h  adw-web-window.blp  adw-web-window.c  adw-web-window.h  adw-web-window.ui  adw-web.gresource.xml  main.c  meson.build
